# Miner

./: .gitignore  LICENSE  README.md  build.gradle.kts  build_final.txt  build_final_2.txt  build_log.txt  build_log_2.txt  build_log_3.txt  build_log_4.txt  build_log_5.txt  build_output.txt  deps.txt  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts  google-services.json  proguard-rules.pro
app/src/androidTest/java/com/meetmyartist/miner/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/mining/: benchmark.cpp  benchmark.h  blake3.cpp  blake3.h  native_miner.cpp  randomx_light.cpp  randomx_light.h  scrypt.cpp  scrypt.h  sha256.cpp  sha256.h
app/src/main/java/com/meetmyartist/miner/: MainActivity.kt  MinerApplication.kt
app/src/main/java/com/meetmyartist/miner/auth/: BiometricAuthManager.kt  GoogleAuthManager.kt
app/src/main/java/com/meetmyartist/miner/data/: CloudSyncManager.kt
app/src/main/java/com/meetmyartist/miner/di/: DatabaseModule.kt
app/src/main/java/com/meetmyartist/miner/mining/: CryptoHasher.kt  (+7 more)
app/src/main/res/layout/: widget_mining_status.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  widget_info.xml
app/src/test/java/com/meetmyartist/miner/: ExampleUnitTest.kt  MiningViewModelTest.kt
features/: README.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+69 files in other folders)
